--- a/html/Individuo.html
+++ b/html/Individuo.html
@@ -31,6 +31,9 @@
                 <a href="MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkActive">Materiais Educativos</p>
                 </a>
+                <a href="EleicoesPosRevolucao.html" class="btnNavbar">
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições</p>
+                </a>
                 <a href="SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
@@ -61,6 +64,11 @@
             <li>
                 <a role="menuitem" href="MateriaisEducativos.html">
                     <p class="m0 jersey grey navlinkInactiveHamburger">Materiais Educativos</p>
+                </a>
+            </li>
+            <li>
+                <a role="menuitem" href="EleicoesPosRevolucao.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Eleições</p>
                 </a>
             </li>
             <li>
