--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
                 </a>
                 <a href="html/EleicoesPosRevolucao.html" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições Pós-Revolução</p>
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições</p>
                 </a>
                 <a href="html/SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
@@ -64,6 +64,11 @@
             <li>
                 <a role="menuitem" href="html/MateriaisEducativos.html">
                     <p class="m0 jersey grey navlinkInactiveHamburger">Materiais Educativos</p>
+                </a>
+            </li>
+            <li>
+                <a role="menuitem" href="html/EleicoesPosRevolucao.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Eleições</p>
                 </a>
             </li>
             <li>
