--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -36,6 +36,9 @@
                 <a href="MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
                 </a>
+                <a href="EleicoesPosRevolucao.html" class="btnNavbar">
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições</p>
+                </a>
                 <a href="SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
@@ -66,6 +69,11 @@
             <li>
                 <a role="menuitem" href="MateriaisEducativos.html">
                     <p class="m0 jersey grey navlinkInactiveHamburger">Materiais Educativos</p>
+                </a>
+            </li>
+            <li>
+                <a role="menuitem" href="EleicoesPosRevolucao.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Eleições</p>
                 </a>
             </li>
             <li>
