--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -31,6 +31,9 @@
                 <a href="MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkActive">Materiais Educativos</p>
                 </a>
+                <a href="EleicoesPosRevolucao.html" class="btnNavbar">
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições</p>
+                </a>
                 <a href="SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
                 </a>
@@ -63,11 +66,11 @@
                     <p class="m0 jersey red navlinkActive">Materiais Educativos</p>
                 </a>
             </li>
-            <!-- <li>
-                <a role="menuitem" href="SobreProjeto.html">
-                    <p class="m0 jersey grey navlinkInactiveHamburger">Participação Política</p>
+            <li>
+                <a role="menuitem" href="EleicoesPosRevolucao.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Eleições</p>
                 </a>
-            </li> -->
+            </li>
             <li>
                 <a role="menuitem" href="SobreProjeto.html">
                     <p class="m0 jersey grey navlinkInactiveHamburger">Sobre o Projeto</p>
