added elections to mainpage section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,38 @@
     </div>
 
 
+    <!-- SECTION 4 // elections -->
+    <div id="section4" class="dflex fdc jcc aic bgBeige">
+        <p class="m0 jersey red fontTitleSize">Eleições Pós-Revolução</p>
+
+        <div id="section4Content">
+            <div id="section4Img"></div>
+
+            <div id="section4Txt" class="dflex fdc jcsb">
+                <div>
+                    <p class="m0 IBM fontNormalSize">
+                        Explorar os resultados das eleições é compreender como o povo expressa a sua voz em momentos decisivos. <br><br>
+                        Descobre como a Revolução dos Cravos abriu caminho à liberdade de escolha política.
+                        Através de gráficos interativos, explora os resultados eleitorais ao longo das décadas e observa como a participação democrática transformou o rumo de Portugal.
+                    </p>
+                </div>
+
+                <!-- BUTTON EXPLORE / "EXPLORAR" -->
+                <div>
+                    <a href="html/EleicoesPosRevolucao.html" class="btnStart bgGrey dif jcsa">
+                        <div id="btnStartImg" class="dif">
+                            <img src="images/website/iconography/cravo_cropped.png" width="100%">
+                        </div>
+                        <div class="dflex aic">
+                            <p class="m0 jersey red">EXPLORAR</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- FOOTER -->
     <footer class="dflex jcc bgRed">
         <div id="footer">
