removed the games from the devices that aren't computers

--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -30,7 +30,7 @@
             <br>
             <p class="m0 jersey red fontOutlineBig fontSubtitleSize">Pedimos desculpa</p>
             <p id="sorryTxt" class="m0 IBM beige fontNormalSize fontOutlineSmall">
-                Os minijogos só estão disponíveis em computador. <br>
+                Os minijogos só estão disponíveis para computador. <br>
                 Se já estás num computador, experimenta maximizar o ecrã ou usar outro navegador.
             </p>
             <br>
