--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -106,8 +106,27 @@
         </div>
     </div>
 
+    <!-- WE'RE SORRY SCREEN -->
+    <div id="sorry" class="dflex jcc aic">
+        <div class="dflex fdc jcc aic">
+            <img src="../images/website/iconography/unavailable.png">
+    
+            <br>
+            <p class="m0 jersey red fontOutlineBig fontSubtitleSize">Pedimos desculpa</p>
+            <p id="sorryTxt" class="m0 IBM beige fontNormalSize fontOutlineSmall">
+                Os minijogos só estão disponíveis em computador. <br>
+                Se já estás num computador, experimenta maximizar o ecrã ou usar outro navegador.
+            </p>
+            <br>
+            
+            <a href="../index.html" class="btnStart bgBeige dflex jcc aic">
+                <p class="m0 jersey red">Página inicial</p>
+            </a>
+        </div>
+    </div>
+
     <!-- VIDA DIÁRIA/DAILY LIFE SECTION TITLE -->
-    <div class="dflex fdr jcc">
+    <div id="gameTitle" class="dflex fdr jcc">
         <div class="dflex fdr jcsb aic w80">
             <div class="yearGameTitle">
                 <!-- <hr> -->
@@ -143,7 +162,7 @@
     </div>
 
     <!-- REVOLUCIONÁRIA / REVOLUTIONARY SECTION TITLE -->
-    <div class="dflex fdr jcc">
+    <div id="gameTitle" class="dflex fdr jcc">
         <div class="dflex fdr jcsb aic w80">
             <div class="yearGameTitle">
                 <!-- <hr> -->
