added picture to censorship game

--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -105,7 +105,7 @@
 
     <!-- GAME -->
     <div id="divGame" class="wm">
-        <p class="m0 p0 jersey beige fontSubtitleSize">Título jogo</p>
+        <p id="gameTitle" class="m0 p0 jersey beige fontSubtitleSize">Título jogo</p>
         
         <div id="gameP5js">
             <!-- GAME ADDED THROUGH P5.JS -->
@@ -115,7 +115,7 @@
         <div id="aboutOrTutorial" class="bgBeige">
             <!-- INFO ADDED THROUGH JAVASCRIPT -->
             
-            <p class="m0 p0 IBM fontNormalSize2">Donec nec nibh quis ex pharetra pellentesque vitae nec elit. Suspendisse eu hendrerit quam, quis rhoncus mi. Proin ut finibus nulla, ut cursus libero. Aenean suscipit sagittis enim, at porta massa commodo ac. Duis dapibus id eros in luctus. Etiam nulla orci, tincidunt eu enim vitae, hendrerit pharetra erat. Fusce at velit malesuada, finibus dolor a, pulvinar turpis.</p>
+            <p id="gameDescription" class="m0 p0 IBM fontNormalSize2">Donec nec nibh quis ex pharetra pellentesque vitae nec elit. Suspendisse eu hendrerit quam, quis rhoncus mi. Proin ut finibus nulla, ut cursus libero. Aenean suscipit sagittis enim, at porta massa commodo ac. Duis dapibus id eros in luctus. Etiam nulla orci, tincidunt eu enim vitae, hendrerit pharetra erat. Fusce at velit malesuada, finibus dolor a, pulvinar turpis.</p>
             <br><br><br><br>
             <p class="m0 p0 jersey grey fontSubtitleSize2">Controlos:</p>
         </div>
