--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -155,7 +155,7 @@
                 <div id="divGameImg"></div>
             </div>
             <div id="basketFood" class="divGame">
-                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Tempos Difíceis</p>
                 <div id="divGameImg"></div>
             </div>
         </div>
