--- a/html/Individuo.html
+++ b/html/Individuo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiais Educativos</title>
+    <link rel="icon" type="image/x-icon" href="../images/website/iconography/cravo_logo.png">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="../style/style.css">
