--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                 <!-- years -->
                 <div id="years" class="dflex fdc jcc aic">
                     <p id="yearsNbr" class="m0 jersey red fontTitleSize">50</p>
-                    <p class="m0 IBM beige fontNormalSize">Anos</p>
+                    <p id="yearsWord" class="m0 IBM beige fontNormalSize">Anos</p>
                 </div>
 
                 <!-- months -->
                 <div id="months" class="dflex fdc jcc aic">
                     <p id="monthsNbr" class="m0 jersey red fontTitleSize">8</p>
-                    <p class="m0 IBM beige fontNormalSize">Meses</p>
+                    <p id="monthsWord" class="m0 IBM beige fontNormalSize">Meses</p>
                 </div>
 
                 <!-- days -->
