--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -119,6 +119,9 @@
             <p id="gameDescription" class="m0 p0 IBM fontNormalSize2">Donec nec nibh quis ex pharetra pellentesque vitae nec elit. Suspendisse eu hendrerit quam, quis rhoncus mi. Proin ut finibus nulla, ut cursus libero. Aenean suscipit sagittis enim, at porta massa commodo ac. Duis dapibus id eros in luctus. Etiam nulla orci, tincidunt eu enim vitae, hendrerit pharetra erat. Fusce at velit malesuada, finibus dolor a, pulvinar turpis.</p>
             <br><br><br><br>
             <p class="m0 p0 jersey grey fontSubtitleSize2">Controlos:</p>
+            <div id="controls" class="dflex fdr jcc">
+                
+            </div>
         </div>
     </div>    
 
