added percentage and number of people who voted

--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -96,7 +96,7 @@
                 </span>
                 <p class="m0 jersey fontSubtitleSize2">Passar adiante a palavra da história.</p>
                 <p class="m0 IBM fontNormalSize">
-                    Este recurso foi concebido para reconstruir a sequência dos acontecimentos que antecederam a Revolução dos Cravos e para demonstrar como o 25 de Abril transformou o panorama social e político de Portugal. A iniciativa destina-se a preservar a memória coletiva, estimular a reflexão e promover a compreensão dos valores democráticos que moldaram a história do país, visto que as gerações mais jovens são as que escolhem e constroem o futuro de Portugal.
+                    Este recurso foi concebido para reconstruir a sequência dos acontecimentos que antecederam a Revolução dos Cravos e para demonstrar como o 25 de Abril transformou o panorama social e político de Portugal. A iniciativa destina-se a preservar a memória coletiva, estimular a reflexão e promover a compreensão dos valores democráticos que moldaram a história do país.
                 </p>
             </div>
         </div>
@@ -106,7 +106,7 @@
     <div id="thirdSection" class="dflex jcc aic sectionsHeight">
         <div class="mainWidth bgBeige">
             <p id="contentCreditsTxt" class="m0 IBM fontNormalSize">
-                O conteúdo histórico presente em Liberty Breakout foi cuidadosamente baseado em fontes fidedignas, garantindo a precisão e a autenticidade dos acontecimentos retratados. Para isso, recorremos a plataformas de preservação digital, como o Arquivo.pt, bem como a materiais de investigação e outros recursos historiográficos. O objetivo é proporcionar uma experiência educativa sustentada em factos verificados, permitindo aos jogadores explorar a Revolução dos Cravos de forma informada e envolvente.
+                O conteúdo histórico presente em Liberdade Cravada foi cuidadosamente baseado em fontes fidedignas, garantindo a precisão e a autenticidade dos acontecimentos retratados. Para isso, recorri a conteúdos preservados pelo <a href="https://arquivo.pt" class="red">Arquivo.pt</a> e a recursos disponibilizados pela <a href="https://50anos25abril.pt" class="red">Comissão Comemorativa dos 50 Anos do 25 de Abril</a>. O objetivo é proporcionar uma experiência educativa sustentada em factos verificados, permitindo aos jogadores explorar a Revolução dos Cravos de forma informada e envolvente.
             </p>
         </div>
     </div>
