--- a/html/EleicoesPosRevolucao.html
+++ b/html/EleicoesPosRevolucao.html
@@ -125,6 +125,21 @@
             </div>
         
             <div id="chart" class="dflex jcc"></div>
+
+            <div id="extra" class="dflex fdc">
+                <div class="dflex fdr jcc">
+                    <p id="numero" class="m0 red jersey fontTitleSize">59,84%</p>
+
+                    <div id="votos" class="dflex fdc jcc">
+                        <p id="inscritos" class="m0 IBM fontNormalSize2">
+                            Inscritos: 10818226
+                        </p>
+                        <p id="votantes" class="m0 IBM fontNormalSize2">
+                            Votantes: 6473789
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="sections bgBeige">
