added elections to footer

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -285,9 +285,12 @@
                         <a href="MateriaisEducativos.html">
                             <p id="footerLink" class="m0 IBM beige fontNormalSize2">> Materiais Educativos</p>
                         </a>
+                        <a href="EleicoesPosRevolucao.html">
+                            <p class="m0 IBM beige fontNormalSize2">> Eleições</p>
+                        </a>
                         <!-- Sobre o Projeto -->
                         <a href="SobreProjeto.html">
-                            <p class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
+                            <p id="footerLink2" class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
                         </a>
                     </div>
                 </div>
