footer in index

--- a/index.html
+++ b/index.html
@@ -256,15 +256,18 @@
                     <div>
                         <!-- Jogos Educativos -->
                         <a href="html/JogosEducativos.html">
-                            <p class="m0 IBM beige fontNormalSize2"> Jogos Educativos</p>
+                            <p class="m0 IBM beige fontNormalSize2">> Jogos Educativos</p>
                         </a>
                         <!-- Materiais Educativos -->
                         <a href="html/MateriaisEducativos.html">
-                            <p id="footerLink" class="m0 IBM beige fontNormalSize2"> Materiais Educativos</p>
+                            <p id="footerLink" class="m0 IBM beige fontNormalSize2">> Materiais Educativos</p>
+                        </a>
+                        <a href="html/EleicoesPosRevolucao.html">
+                            <p class="m0 IBM beige fontNormalSize2">> Eleições</p>
                         </a>
                         <!-- Sobre o Projeto -->
                         <a href="html/SobreProjeto.html">
-                            <p class="m0 IBM beige fontNormalSize2"> Sobre o Projeto</p>
+                            <p id="footerLink2" class="m0 IBM beige fontNormalSize2">> Sobre o Projeto</p>
                         </a>
                     </div>
                 </div>
