--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -94,7 +94,7 @@
                 <span class="dflex fdr">
                     <p class="m0 jersey fontSubtitleSize red">Liberdade Cravada</p>
                 </span>
-                <p class="m0 jersey fontSubtitleSize2">Passar adiante a palavra da história.</p>
+                <p class="m0 jersey fontSubtitleSize2">Passar adiante o legado da história.</p>
                 <p class="m0 IBM fontNormalSize">
                     Este recurso foi concebido para reconstruir a sequência dos acontecimentos que antecederam a Revolução dos Cravos e para demonstrar como o 25 de Abril transformou o panorama social e político de Portugal. A iniciativa destina-se a preservar a memória coletiva, estimular a reflexão e promover a compreensão dos valores democráticos que moldaram a história do país.
                 </p>
