--- a/html/SobreProjeto.html
+++ b/html/SobreProjeto.html
@@ -106,7 +106,7 @@
     <div id="thirdSection" class="dflex jcc aic sectionsHeight">
         <div class="mainWidth bgBeige">
             <p id="contentCreditsTxt" class="m0 IBM fontNormalSize">
-                O conteúdo histórico presente em Liberdade Cravada foi cuidadosamente baseado em fontes fidedignas, garantindo a precisão e a autenticidade dos acontecimentos retratados. Para isso, recorri a conteúdos preservados pelo <a href="https://arquivo.pt" class="red">Arquivo.pt</a> e a recursos disponibilizados pela <a href="https://50anos25abril.pt" class="red">Comissão Comemorativa dos 50 Anos do 25 de Abril</a>. O objetivo é proporcionar uma experiência educativa sustentada em factos verificados, permitindo aos jogadores explorar a Revolução dos Cravos de forma informada e envolvente.
+                O conteúdo histórico presente em Liberdade Cravada foi cuidadosamente baseado em fontes fidedignas, garantindo a precisão e a autenticidade dos acontecimentos retratados. Para isso, recorri sobretudo a conteúdos preservados pelo <a href="https://arquivo.pt" class="red">Arquivo.pt</a>, complementando com recursos disponibilizados pela <a href="https://50anos25abril.pt" class="red">Comissão Comemorativa dos 50 Anos do 25 de Abril</a>. O objetivo é proporcionar uma experiência educativa sustentada em factos verificados, permitindo aos utilizadores explorar a Revolução dos Cravos de forma informada e envolvente.
             </p>
         </div>
     </div>
