--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
             <div id="section2Txt" class="dflex fdc jcsb">
                 <div>
                     <p class="m0 IBM fontNormalSize">
-                        Embarca numa viagem interativa que te transporta para os momentos que antecederam e impulsionaram a Revolução dos Cravos. Desde o dia a dia de cada posição social, à intensificação da opressão e, finalmente, ao dia da liberdade.
+                        Explora os nossos minijogos educativos e descobre, de forma simples e interativa, alguns aspetos de como era viver em Portugal antes da Revolução dos Cravos.
+                        Cada jogo transporta-te para situações específicas, mas comuns, da época, com um toque leve, mas sem nunca perder de vista a realidade histórica.
                         <br><br>
-                        Os nossos minijogos educativos convidam-te a experimentar, de forma lúdica e envolvente, cada etapa desta transformação histórica.
+                        As descrições que acompanham cada jogo ajudam-te a perceber melhor o contexto em que se inspiram.
                     </p>
                 </div>
 
@@ -175,7 +176,7 @@
 
         <div id="section3Content" class="dflex fdc jcc aic">
             <p class="m0 IBM fontNormalSize beige">
-                Na página de Materiais Educativos, terás acesso a fichas e informações relevantes que te ajudarão a compreender melhor a importância do 25 de Abril e a conquista dos direitos que moldaram a democracia em Portugal.
+                Na página de Materiais Educativos, encontras conteúdos que aprofundam o que foi viver durante o Estado Novo e explicam os momentos-chave que levaram à Revolução dos Cravos. Explora as figuras e os grupos sociais da época, bem como uma linha temporal que te ajuda a contextualizar o caminho até à democracia.
             </p>
 
             <div id="section3Images" class="dflex fdr jcsb">
