--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="laGvm0vfQ8AUvfS_SyO6b0tJ4HVBcygy_3HGncBqaUo" />
     <title>Liberdade Cravada</title>
     <link rel="icon" type="image/x-icon" href="images/website/iconography/cravo_logo.png">
 
