--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -21,6 +21,9 @@
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
     <script src=".././javascript/jogo.js" type="module"></script>
+
+    <!-- ML5.js -->
+    <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
 </head>
 <body class="bgGrey">
     <!-- WE'RE SORRY SCREEN -->
