--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -20,10 +20,12 @@
     <!-- P5.JS -->
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script> -->
     <script src=".././javascript/jogo.js" type="module"></script>
 
     <!-- ML5.js -->
-    <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
+    <!-- <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script> -->
+    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
 </head>
 <body class="bgGrey">
     <!-- WE'RE SORRY SCREEN -->
