fixed timer in mainpage and added names to each historial figure/group in page "materiais educativos"

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -98,31 +98,40 @@
             </p>
 
             <div id="figuresImgDiv" class="w100">
-                <a id="girl" class="charBtn bgBeige">
+                <a id="girl" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Meninas</p>
                     <!-- figure image -->
                 </a>
-                <a id="boy" class="charBtn bgBeige">
+                <a id="boy" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Meninos</p>
                     <!-- figure image -->
                 </a>
-                <a id="woman" class="charBtn bgBeige">
+                <a id="woman" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Mulher</p>
                     <!-- figure image -->
                 </a>
-                <a id="poorMan" class="charBtn bgBeige">
+                <a id="poorMan" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Homem</p>
                     <!-- figure image -->
                 </a>
-                <a id="humberto" class="charBtn bgBeige">
+                <a id="humberto" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Humberto</p>
                     <!-- figure image -->
                 </a>
-                <a id="military" class="charBtn bgBeige">
+                <a id="military" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Militares</p>
                     <!-- figure image -->
                 </a>
-                <a id="PIDE" class="charBtn bgBeige">
+                <a id="PIDE" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">PIDE</p>
                     <!-- figure image -->
                 </a>
-                <a id="marcello" class="charBtn bgBeige">
+                <a id="marcello" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Marcello</p>
                     <!-- figure image -->
                 </a>
-                <a id="salazar" class="charBtn bgBeige">
+                <a id="salazar" class="charBtn bgBeige dflex jcc">
+                    <p id="characterTxt" class="m0 IBM beige fontNormalSize">Salazar</p>
                     <!-- figure image -->
                 </a>
             </div>
